Use streams toList instead collect